Initial release of 2.0.0 (#119)
* Initial release of 2.0.0

* Move services to java resources

* Fix cdi load of test package

* Fix spring classes location for IT

* Fix micronaut IT

* Fix inverse like fn

* Move to 2.0.0-RC1